# baste

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs
