[package]
name = "baste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
envconfig = "0.10.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.12", features = ["derive"] }
actix-web = "4.0.1"
chbs = "0.1.0"
futures = "0.3.21"

[profile.release]
lto = true
codegen-units = 1